--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
   "name": "archaitool",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/main/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+   "dev": "concurrently \"npm run vite\" \"npm run electron\"",
+  "build:main": "tsc -p tsconfig.node.json",
+  "vite": "cd src/renderer && npm run dev",
+  "electron": "npm run build:main && electron dist/main.js"
+   
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@electron/remote": "^2.1.2",
+    "concurrently": "^9.1.2",
+    "electron": "^34.0.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "electron-builder": "^25.1.8",
+    "electron-updater": "^6.3.9",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0"
+  }
 }
